Adding another paragraph to test NPM lite Server

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>This is the Page Header</h1>
         <p>This is the page paragraph</p>
+        <p>This is added paragraph later time</p>
     </body>
 </html>
