Removing the Old code with New Div Created for Test Purpose Only.

--- a/index.html
+++ b/index.html
@@ -6,23 +6,8 @@
         <title>Test Purpose Only</title>
     </head>
     <body>
-        <h1>This is the Page Header</h1>
-        <p>This is the page paragraph</p>
-        <p>This is added paragraph later time</p>
-        <h1>This is the Page Header</h1>
-        <p>This is the page paragraph</p>
-        <p>This is added paragraph later time</p>
-        <h1>This is the Page Header</h1>
-        <p>This is the page paragraph</p>
-        <p>This is added paragraph later time</p>
-        <h1>This is the Page Header</h1>
-        <p>This is the page paragraph</p>
-        <p>This is added paragraph later time</p>
-        <h1>This is the Page Header</h1>
-        <p>This is the page paragraph</p>
-        <p>This is added paragraph later time</p>
-        <h1>This is the Page Header</h1>
-        <p>This is the page paragraph</p>
-        <p>This is added paragraph later time</p>
+        <div>
+            This Div is Created for Learning Purpose Only
+        </div>
     </body>
 </html>
