--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Test Purpose Only</title>
     </head>
     <body>
-        <div>
-            This Div is Created for Learning Purpose Only
-        </div>
+        <h1>This is the Page Header</h1>
+        <p>This is the page paragraph</p>
+        <p>This is added paragraph later time</p>
     </body>
 </html>
